update website URLs to reflect new domain: change all instances of "nicolasvazquez.com.ar" to "nicolasvazquez.vercel.app" across layout, SEO components, sitemap, robots, and metadata for consistency and improved accessibility.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "https://nicolasvazquez.com.ar/avatar.png",
+      "src": "https://nicolasvazquez.vercel.app/avatar.png",
       "sizes": "400x400",
       "type": "image/png",
       "purpose": "any maskable"
