--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,8 +12,8 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "https://nicolasvazquez.vercel.app/avatar.png",
-      "sizes": "400x400",
+      "src": "https://nicolasvazquez.vercel.app/avatar-bg.png",
+      "sizes": "256x256",
       "type": "image/png",
       "purpose": "any maskable"
     }
