--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,7 +12,7 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "https://nicolasvazquez.vercel.app/avatar-bg.png",
+      "src": "https://nicolasvazquez.com.ar/avatar-bg.png",
       "sizes": "256x256",
       "type": "image/png",
       "purpose": "any maskable"
