--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "@types/uuid": "^10.0.0",
     "gray-matter": "^4.0.3",
-    "next": "15.5.2",
+    "next": "^16.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0",
