standardize metadata descriptions: change text to lowercase for consistency across layout, site configuration, and manifest files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Nicolás Vazquez - Senior Software Engineer",
   "short_name": "Nicolás Vazquez",
-  "description": "Personal website and blog of Nicolás Vazquez, Senior Software Engineer from Buenos Aires. Notes on software engineering, web development, and building scalable applications.",
+  "description": "personal website and blog of Nicolás Vazquez, senior software engineer from Buenos Aires, argentina. notes on software engineering, web development, and building scalable applications.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
